<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- The string resources for activity_main.xml file-->

    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name ="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity </string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="order_summary">Order</string>
    <string name="zero_dollar">$0</string>
    <string name="order">Order</string>
    <string name="on_date">Wanna go on a date? :)</string>

    <!-- The string resources for MainActivity.java file-->
    <string name="email_order_summary">Order Summary for <xliff:g id="name" example="Amy">%s</xliff:g> </string>
    <string name="toast_for_max">You can\'t order more than 100 cups</string>
    <string name="toast_for_min">You can\'t order below 0 cup </string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="add_whipped_cream">Add Whipped Cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="add_chocolate">Add Chocolate? <xliff:g id="hasChocolate" example="true">%b</xliff:g></string>
    <string name="total">Total:  <xliff:g id="price" example="34">%s</xliff:g></string>
    <string name="thank_you">Thank You</string>
    <string name="quantity_non_zero">Quantity: <xliff:g id="quantity" example="4">%d</xliff:g></string>
    <string name="set_quantity"><xliff:g id="number" example="4">%d</xliff:g></string>

</resources>
