<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.justjava.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
<LinearLayout
    android:id="@+id/activity_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
  >
    <EditText
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColorHint="#FFF3E0"
        android:textColor="#FFF3E0"
        />

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/toppings"
        android:textColor="#FFF3E0"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"/>
    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:textColor="#FFF3E0"
        android:paddingLeft="24dp"
        android:buttonTint="#FFF3E0"
        />
    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:textColor="#FFF3E0"
        android:paddingLeft="24dp"
        android:buttonTint="#FFF3E0"
        />
    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/quantity"
        android:textColor="#FFF3E0"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:onClick="increment"
        android:text="@string/plus"
        android:layout_marginRight="8dp"
        />
    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/zero"
        android:textColor="#FFF3E0"/>
    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/minus"
        android:onClick="decrement"
        android:layout_marginLeft="8dp"
      />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_summary"
        android:paddingTop="16dp"
        android:textColor="#FFF3E0"
        android:textAllCaps="true"/>
    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:text="@string/zero_dollar"
        android:textColor="#FFF3E0"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:onClick="submitOrder"
        android:textAllCaps="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF3E0"
        android:text="@string/on_date"
        android:textSize="24sp"
        android:paddingTop="16dp"
        />

</LinearLayout>
    </ScrollView>
